--- a/client/src/Pages/Agent.css
+++ b/client/src/Pages/Agent.css
@@ -11,6 +11,7 @@ h1 {
     color: #444;
     margin-top: 20px;
     font-size: 2.5em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 ul {
